# rick-and-morty

./: Cargo.toml  LICENSE-MIT  README.md
examples/: character.rs  characters.rs  episodes.rs  locations.rs
src/: character.rs  entities.rs  entity.rs  lib.rs
src/entities/: character.rs  episode.rs  location.rs  mod.rs
