[package]
name = "rick-morty-api-rust"
version = "0.1.0"
authors = ["Damola <dshomoye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.10.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }